# rasp-gym

./: .gitignore  README.md
hardware/: Cargo.toml
hardware/src/: lcd_driver.rs  main.rs
web-frontend/: index.html  package-lock.json  package.json
web-frontend/src/: App.tsx  firebase.tsx  main.tsx
web-frontend/src/components/: Form.tsx  Login.tsx
web-server/: Cargo.toml
web-server/src/: main.rs  mongo.rs  repository.rs
