[package]
name = "web-server"
version = "0.1.0"
edition = "2024"

[dependencies]
actix-web = "4.11.0"
serde = "1.0.219"
tokio = { version = "1", features = ["full"] }
sqlx = { version = "0.8.6", features = ["runtime-tokio-native-tls", "postgres", "time"] }
time = { version = "0.3", features = ["serde"] }
futures = "0.3.31"
mongodb = "3.2.5"
dotenv = "0.15.0"
